# pyavd-lab

./: pyproject.toml
group_vars/: DC1.yml
structured_config/: leaf1.yml
